--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.15",
     "element-plus": "^2.9.7",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
     "vuetify": "^3.8.0-beta.0"
   },
   "devDependencies": {
