--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@mdi/font": "^7.4.47",
     "@tailwindcss/vite": "^4.0.15",
+    "@tanstack/vue-query": "^5.71.10",
+    "axios": "^1.8.4",
     "element-plus": "^2.9.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
