--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tanstack/vue-query": "^5.72.0",
     "axios": "^1.8.4",
     "element-plus": "^2.9.7",
+    "leaflet": "^1.9.4",
+    "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vuetify": "^3.8.0"
